Tabela de dados adicionada.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <img id="show-user-media-image" src="" />
       </div>
     </div>
+    <table id="table-logs">
+      <th>Quadros processados</th>
+      <th>Quadros perdidos(timeout)</th>
+      <th>Tempo médio de resposta</th>
+      <tr>
+        <td id="frames-processed">0</td>
+        <td id="frames-timeout">0</td>
+        <td id="frames-response">0ms</td>
+      </tr>
+    </table>
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
