Tabela de dados adicionada.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
       </div>
     </div>
     <table id="table-logs">
-      <th>Quadros processados</th>
-      <th>Quadros perdidos(timeout)</th>
-      <th>Tempo médio de resposta</th>
-      <tr>
-        <td id="frames-processed">0</td>
-        <td id="frames-timeout">0</td>
-        <td id="frames-response">0ms</td>
-      </tr>
+      <tbody>
+        <tr>
+          <th>Quadros processados</th>
+          <th>Quadros perdidos(timeout)</th>
+          <th>Tempo médio de resposta</th>
+        </tr>
+        <tr>
+          <td id="frames-processed">0</td>
+          <td id="frames-timeout">0</td>
+          <td id="frames-response">0ms</td>
+        </tr>
+      </tbody>
     </table>
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
